--- a/index.htm
+++ b/index.htm
@@ -5,10 +5,19 @@
 h1 {color:#A09751;font-family:impact;}
 p  {font-family:impact;margin: 50px;font-size:110%;}
 iframe {margin: 50px;}
-</style
+table, th, td {border: 1px solid black; border-collapse:collapse;}
+a:link    {color:black; background-color:transparent; text-decoration:none; font-family:impact;}
+a:visited {color:black; background-color:transparent; text-decoration:none; font-family:impact;}
+a:hover   {color:grey; background-color:transparent; text-decoration:none; font-family:impact;}
+a:active  {color:black; background-color:transparent; text-decoration:none; font-family:impact;}
+</style>
 </head>
 <body style="background-color:orange;">
-<a href="https://www.youtube.com/channel/UCTYdbWVt3R5kX5gCXQHpYJg" target="_blank"><h1 style="font-size:400%;text-align:center;border: 1px solid black;padding: 30px;" title="Click here to go to my channel"><img src="https://yt3.ggpht.com/-OUhnFbf1LVg/AAAAAAAAAAI/AAAAAAAAAAA/UaYBbNaVuLg/s100-c-k-no-mo-rj-c0xffffff/photo.jpg" alt="https://yt3.ggpht.com/-OUhnFbf1LVg/AAAAAAAAAAI/AAAAAAAAAAA/UaYBbNaVuLg/s100-c-k-no-mo-rj-c0xffffff/photo.jpg" style="float:right;width:150px;height:150px;"><p><img src="https://yt3.ggpht.com/-OUhnFbf1LVg/AAAAAAAAAAI/AAAAAAAAAAA/UaYBbNaVuLg/s100-c-k-no-mo-rj-c0xffffff/photo.jpg" alt="https://yt3.ggpht.com/-OUhnFbf1LVg/AAAAAAAAAAI/AAAAAAAAAAA/UaYBbNaVuLg/s100-c-k-no-mo-rj-c0xffffff/photo.jpg" style="float:left;width:150px;height:150px;"><ins>ilikecookies2015</ins></h1></a>
+<a href="https://www.youtube.com/channel/UCTYdbWVt3R5kX5gCXQHpYJg" target="_blank"><h1 style="font-size:400%;text-align:center;border: 2px solid black;padding: 30px;" title="Click here to go to my channel"><img src="https://yt3.ggpht.com/-OUhnFbf1LVg/AAAAAAAAAAI/AAAAAAAAAAA/UaYBbNaVuLg/s100-c-k-no-mo-rj-c0xffffff/photo.jpg" alt="https://yt3.ggpht.com/-OUhnFbf1LVg/AAAAAAAAAAI/AAAAAAAAAAA/UaYBbNaVuLg/s100-c-k-no-mo-rj-c0xffffff/photo.jpg" style="float:right;width:150px;height:150px;"><p><img src="https://yt3.ggpht.com/-OUhnFbf1LVg/AAAAAAAAAAI/AAAAAAAAAAA/UaYBbNaVuLg/s100-c-k-no-mo-rj-c0xffffff/photo.jpg" alt="https://yt3.ggpht.com/-OUhnFbf1LVg/AAAAAAAAAAI/AAAAAAAAAAA/UaYBbNaVuLg/s100-c-k-no-mo-rj-c0xffffff/photo.jpg" style="float:left;width:150px;height:150px;"><ins>ilikecookies2015</ins></h1></a>
+<table>
+<tr>
+<td><a href="https://ilikecookies2015.github.io">Home</a>
+<td><a href="https://ilikecookies2015.github.io/videos">Videos</a>
 <p>Hey there! Its ilikecookies2015, but just call me Cookies! Im a small youtuber, who has big dreams. Just before we go any further, if you haven't yet, go subscribe <a href="https://www.youtube.com/channel/UCTYdbWVt3R5kX5gCXQHpYJg?sub_confirmation=1" target="_blank">here</a>. I post gaming videos with collabs like <a href="https://www.youtube.com/channel/UC4Erl7CW5K-fCjHg5HBi0hA" target="_blank">TigerShooter Plays</a> and <a href="https://www.youtube.com/channel/UCuYcy8Svhx3E3kFIEwwiptA" target="_blank">LegendaryEverything</a>. We play some Minecraft, Roblox, Slither.io and tons of other awesome games! Stay tuned for new videos regularly! This website is just a work in progress</p>
 <br>
 <p> Here is my most popular youtube series, Minecraft Survival. Enjoy!</p>
