--- a/index.htm
+++ b/index.htm
@@ -18,6 +18,8 @@ a:active  {color:black; background-color:transparent; text-decoration:none; font
 <tr>
 <td><a href="https://ilikecookies2015.github.io">Home</a>
 <td><a href="https://ilikecookies2015.github.io/videos">Videos</a>
+</tr>
+</table>
 <p>Hey there! Its ilikecookies2015, but just call me Cookies! Im a small youtuber, who has big dreams. Just before we go any further, if you haven't yet, go subscribe <a href="https://www.youtube.com/channel/UCTYdbWVt3R5kX5gCXQHpYJg?sub_confirmation=1" target="_blank">here</a>. I post gaming videos with collabs like <a href="https://www.youtube.com/channel/UC4Erl7CW5K-fCjHg5HBi0hA" target="_blank">TigerShooter Plays</a> and <a href="https://www.youtube.com/channel/UCuYcy8Svhx3E3kFIEwwiptA" target="_blank">LegendaryEverything</a>. We play some Minecraft, Roblox, Slither.io and tons of other awesome games! Stay tuned for new videos regularly! This website is just a work in progress</p>
 <br>
 <p> Here is my most popular youtube series, Minecraft Survival. Enjoy!</p>
