--- a/videos.html
+++ b/videos.html
@@ -2,21 +2,22 @@
 <html>
 <head>
 <style>
-body {background-color: pink;}
-h1   {font-family: impact; color: red;}
-p    {font-family: impact; color: blue;}
+h1 {color:#A09751;font-family:impact;}
+p  {font-family:impact;margin: 50px;font-size:110%;}
+iframe {margin: 50px;}
+table, th, td {border: 1px solid black; border-collapse:collapse;}
+a:link    {color:black; background-color:transparent; text-decoration:none; font-family:impact;}
+a:visited {color:black; background-color:transparent; text-decoration:none; font-family:impact;}
+a:hover   {color:grey; background-color:transparent; text-decoration:none; font-family:impact;}
+a:active  {color:black; background-color:transparent; text-decoration:none; font-family:impact;}
 </style>
 </head>
-<body>
-
-<h1>Search Engines</h1>
-<p>Here is a list of search engines</p>
-<br>
-<table id="t01" style="border: 1px solid black;">
+<body style="background-color:orange;">
+<a href="https://www.youtube.com/channel/UCTYdbWVt3R5kX5gCXQHpYJg" target="_blank"><h1 style="font-size:400%;text-align:center;border: 2px solid black;padding: 30px;" title="Click here to go to my channel"><img src="https://yt3.ggpht.com/-OUhnFbf1LVg/AAAAAAAAAAI/AAAAAAAAAAA/UaYBbNaVuLg/s100-c-k-no-mo-rj-c0xffffff/photo.jpg" alt="https://yt3.ggpht.com/-OUhnFbf1LVg/AAAAAAAAAAI/AAAAAAAAAAA/UaYBbNaVuLg/s100-c-k-no-mo-rj-c0xffffff/photo.jpg" style="float:right;width:150px;height:150px;"><p><img src="https://yt3.ggpht.com/-OUhnFbf1LVg/AAAAAAAAAAI/AAAAAAAAAAA/UaYBbNaVuLg/s100-c-k-no-mo-rj-c0xffffff/photo.jpg" alt="https://yt3.ggpht.com/-OUhnFbf1LVg/AAAAAAAAAAI/AAAAAAAAAAA/UaYBbNaVuLg/s100-c-k-no-mo-rj-c0xffffff/photo.jpg" style="float:left;width:150px;height:150px;"><ins>ilikecookies2015</ins></h1></a>
+<table>
 <tr>
-<th><a href="https://www.google.com">Google</a></th>
-<th><a href="https://www.bing.com/">Bing</a></th>
-<th>Quality</th>
+<td><a href="https://ilikecookies2015.github.io">Home</a>
+<td><a href="https://ilikecookies2015.github.io/videos">Videos</a>
 </tr>
 </table>
 </body>
