--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
 h1 {color:#A09751;font-family:impact;}
 p  {font-family:impact;margin: 50px;font-size:110%;}
 iframe {margin: 50px;}
-table, th, td {border: 1px solid black; border-collapse:collapse;}
+table, th, td {border: 1px solid black; border-collapse:collapse; font-size: 200%; text-align:center;}
 a:link    {color:black; background-color:transparent; text-decoration:none; font-family:impact;}
 a:visited {color:black; background-color:transparent; text-decoration:none; font-family:impact;}
 a:hover   {color:grey; background-color:transparent; text-decoration:none; font-family:impact;}
