--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
 h1 {color:#A09751;font-family:impact;}
 p  {font-family:impact;margin: 50px;font-size:110%;}
 iframe {margin: 50px;}
-table, th, td {border: 1px solid black; border-collapse:collapse; font-size: 200%; text-align:center;}
+table, th, td {border: 1px solid black; border-collapse:collapse; font-size: 160%; margin 200px;}
 a:link    {color:black; background-color:transparent; text-decoration:none; font-family:impact;}
 a:visited {color:black; background-color:transparent; text-decoration:none; font-family:impact;}
 a:hover   {color:grey; background-color:transparent; text-decoration:none; font-family:impact;}
@@ -22,7 +22,4 @@ a:active  {color:black; background-color:transparent; text-decoration:none; font
 </table>
 <p>Hey there! Its ilikecookies2015, but just call me Cookies! Im a small youtuber, who has big dreams. Just before we go any further, if you haven't yet, go subscribe <a href="https://www.youtube.com/channel/UCTYdbWVt3R5kX5gCXQHpYJg?sub_confirmation=1" target="_blank">here</a>. I post gaming videos with collabs like <a href="https://www.youtube.com/channel/UC4Erl7CW5K-fCjHg5HBi0hA" target="_blank">TigerShooter Plays</a> and <a href="https://www.youtube.com/channel/UCuYcy8Svhx3E3kFIEwwiptA" target="_blank">LegendaryEverything</a>. We play some Minecraft, Roblox, Slither.io and tons of other awesome games! Stay tuned for new videos regularly! This website is just a work in progress</p>
 <br>
-<p> Here is my most popular youtube series, Minecraft Survival. Enjoy!</p>
-<iframe width="492" height="277" src="https://www.youtube.com/embed/Bpng1WdpSp0?list=PLPgQN2PMUm8fME9-gBFYqgHmCJOmya00r" frameborder="0" allowfullscreen></iframe>
-</body>
-</html>
+
