--- a/videos.html
+++ b/videos.html
@@ -5,7 +5,7 @@
 h1 {color:#A09751;font-family:impact;}
 p  {font-family:impact;margin: 50px;font-size:110%;}
 iframe {margin: 50px;}
-table, th, td {border: 2px solid black; border-collapse:collapse; font-size: 160%; margin 200px;}
+table, th, td {border: 2px solid black; border-collapse:collapse; font-size: 160%; margin: 200px;}
 a:link    {color:black; background-color:transparent; text-decoration:none; font-family:impact;}
 a:visited {color:black; background-color:transparent; text-decoration:none; font-family:impact;}
 a:hover   {color:grey; background-color:transparent; text-decoration:none; font-family:impact;}
@@ -22,7 +22,5 @@ a:active  {color:black; background-color:transparent; text-decoration:none; font
 </table>
 <p> Here is my most popular youtube series, Minecraft Survival. Enjoy!</p>
 <iframe width="492" height="277" src="https://www.youtube.com/embed/Bpng1WdpSp0?list=PLPgQN2PMUm8fME9-gBFYqgHmCJOmya00r" frameborder="0" allowfullscreen></iframe>
-</body>
-</html>
 </body>
 </html>
