--- a/videos.html
+++ b/videos.html
@@ -5,7 +5,7 @@
 h1 {color:#A09751;font-family:impact;}
 p  {font-family:impact;margin: 50px;font-size:110%;}
 iframe {margin: 50px;}
-table, th, td {border: 2px solid black; border-collapse:collapse; font-size: 160%; margin: 200px;}
+table, th, td {border: 2px solid black; border-collapse:collapse; font-size: 160%;}
 a:link    {color:black; background-color:transparent; text-decoration:none; font-family:impact;}
 a:visited {color:black; background-color:transparent; text-decoration:none; font-family:impact;}
 a:hover   {color:grey; background-color:transparent; text-decoration:none; font-family:impact;}
@@ -14,7 +14,7 @@ a:active  {color:black; background-color:transparent; text-decoration:none; font
 </head>
 <body style="background-color:orange;">
 <a href="https://www.youtube.com/channel/UCTYdbWVt3R5kX5gCXQHpYJg" target="_blank"><h1 style="font-size:400%;text-align:center;border: 2px solid black;padding: 30px;" title="Click here to go to my channel"><img src="https://yt3.ggpht.com/-OUhnFbf1LVg/AAAAAAAAAAI/AAAAAAAAAAA/UaYBbNaVuLg/s100-c-k-no-mo-rj-c0xffffff/photo.jpg" alt="https://yt3.ggpht.com/-OUhnFbf1LVg/AAAAAAAAAAI/AAAAAAAAAAA/UaYBbNaVuLg/s100-c-k-no-mo-rj-c0xffffff/photo.jpg" style="float:right;width:150px;height:150px;"><p><img src="https://yt3.ggpht.com/-OUhnFbf1LVg/AAAAAAAAAAI/AAAAAAAAAAA/UaYBbNaVuLg/s100-c-k-no-mo-rj-c0xffffff/photo.jpg" alt="https://yt3.ggpht.com/-OUhnFbf1LVg/AAAAAAAAAAI/AAAAAAAAAAA/UaYBbNaVuLg/s100-c-k-no-mo-rj-c0xffffff/photo.jpg" style="float:left;width:150px;height:150px;"><ins>ilikecookies2015</ins></h1></a>
-<table>
+<table style="margin:1em auto">
 <tr>
 <td><a href="https://ilikecookies2015.github.io">Home</a>
 <td><a href="https://ilikecookies2015.github.io/videos">Videos</a>
