--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
 h1 {color:#A09751;font-family:impact;}
 p  {font-family:impact;margin: 50px;font-size:110%;}
 iframe {margin: 50px;}
-table, th, td {border: 1px solid black; border-collapse:collapse; font-size: 160%; margin: 200px;}
+table, th, td {border: 1px solid black; border-collapse:collapse; font-size: 160%; border-spacing: 5px;}
 a:link    {color:black; background-color:transparent; text-decoration:none; font-family:impact;}
 a:visited {color:black; background-color:transparent; text-decoration:none; font-family:impact;}
 a:hover   {color:grey; background-color:transparent; text-decoration:none; font-family:impact;}
@@ -20,6 +20,12 @@ a:active  {color:black; background-color:transparent; text-decoration:none; font
 <td><a href="https://ilikecookies2015.github.io/videos">Videos</a>
 </tr>
 </table>
-<p>Hey there! Its ilikecookies2015, but just call me Cookies! Im a small youtuber, who has big dreams. Just before we go any further, if you haven't yet, go subscribe <a href="https://www.youtube.com/channel/UCTYdbWVt3R5kX5gCXQHpYJg?sub_confirmation=1" target="_blank">here</a>. I post gaming videos with collabs like <a href="https://www.youtube.com/channel/UC4Erl7CW5K-fCjHg5HBi0hA" target="_blank">TigerShooter Plays</a> and <a href="https://www.youtube.com/channel/UCuYcy8Svhx3E3kFIEwwiptA" target="_blank">LegendaryEverything</a>. We play some Minecraft, Roblox, Slither.io and tons of other awesome games! Stay tuned for new videos regularly! This website is just a work in progress</p>
+<p>Hey there! Its ilikecookies2015, but just call me Cookies! Im a small youtuber, who has big dreams. 
+Just before we go any further, if you haven't yet, go subscribe <a href="https://www.youtube.com/channel/UCTYdbWVt3R5kX5gCXQHpYJg?sub_confirmation=1" target="_blank">here</a>. 
+I post gaming videos with collabs like <a href="https://www.youtube.com/channel/UC4Erl7CW5K-fCjHg5HBi0hA" target="_blank">TigerShooter Plays</a> and <a href="https://www.youtube.com/channel/UCuYcy8Svhx3E3kFIEwwiptA" target="_blank">
+LegendaryEverything</a>. We play some Minecraft, Roblox, Slither.io and tons of other awesome games!
+On this website, I will upload all of my latest videos, also some photos of the games I am recording, or playing.
+I will also post if I am doing a live stream. To go check out my videos or my photos, click on the links above!
+ Stay tuned for new videos regularly! This website is just a work in progress</p>
 <br>
 
