--- a/videos.html
+++ b/videos.html
@@ -21,6 +21,10 @@ a:active  {color:black; background-color:transparent; text-decoration:none; font
 </tr>
 </table>
 <p> Down here are all of my videos. Go check them out, and while you're there, it doesn't hurt to leave a like and a comment!</p>
-<p><iframe width="492" height="277" src="https://www.youtube.com/embed/Bpng1WdpSp0?list=PLPgQN2PMUm8fME9-gBFYqgHmCJOmya00r" frameborder="0" allowfullscreen style="float:left"></iframe><iframe width="492" height="277" src="https://www.youtube.com/embed/yOlPCDGtT1Y" frameborder="0" allowfullscreen style="float:right;"></iframe></p>
+<p><iframe width="492" height="277" src="https://www.youtube.com/embed/Bpng1WdpSp0" frameborder="0" allowfullscreen style="float:left"></iframe><iframe width="492" height="277" src="https://www.youtube.com/embed/yOlPCDGtT1Y" frameborder="0" allowfullscreen style="float:right;"></iframe></p>
+<p><iframe width="492" height="277" src="https://www.youtube.com/embed/7GsSxq_851o" frameborder="0" allowfullscreen style="float:left"></iframe><iframe width="492" height="277" src="https://www.youtube.com/embed/Bpng1WdpSp0" frameborder="0" allowfullscreen style="float:right;"></iframe></p>
+<p><iframe width="492" height="277" src="https://www.youtube.com/embed/75xZeHhRcZw" frameborder="0" allowfullscreen style="float:left"></iframe><iframe width="492" height="277" src="https://www.youtube.com/embed/lf5sZpUyfOA" frameborder="0" allowfullscreen style="float:right;"></iframe></p>
+<p><iframe width="492" height="277" src="https://www.youtube.com/embed/I-UZUanjms8" frameborder="0" allowfullscreen style="float:left"></iframe><iframe width="492" height="277" src="https://www.youtube.com/embed/5USaWjw_xrY" frameborder="0" allowfullscreen style="float:right;"></iframe></p>
+<p><iframe width="492" height="277" src="https://www.youtube.com/embed/VK7Yo65xzuY" frameborder="0" allowfullscreen style="float:left"></iframe><iframe width="492" height="277" src="https://www.youtube.com/embed/onTf4sV_VOQ" frameborder="0" allowfullscreen style="float:right;"></iframe></p>
 </body>
 </html>
