--- a/videos.html
+++ b/videos.html
@@ -18,6 +18,7 @@ a:active  {color:black; background-color:transparent; text-decoration:none; font
 <tr>
 <td><a href="https://ilikecookies2015.github.io">Home</a>
 <td><a href="https://ilikecookies2015.github.io/videos">Videos</a>
+<td><a href="https://ilikecookies2015.github.io/photos">Photos</a>
 </tr>
 </table>
 <p> Down here are all of my videos. Go check them out, and while you're there, it doesn't hurt to leave a like and a comment!</p>
