--- a/photos.html
+++ b/photos.html
@@ -5,7 +5,7 @@
 h1 {color:#A09751;font-family:impact;}
 p  {font-family:impact;margin: 50px;font-size:110%;}
 iframe {margin: 50px;}
-table, th, td {border: 2px solid black; border-collapse:collapse; font-size: 160%; border-spacing: 5px;}
+table, th, td {border: 2px solid black; border-collapse:collapse; font-size: 160%; border-spacing: 10px;}
 a:link    {color:black; background-color:transparent; text-decoration:none; font-family:impact;}
 a:visited {color:black; background-color:transparent; text-decoration:none; font-family:impact;}
 a:hover   {color:grey; background-color:transparent; text-decoration:none; font-family:impact;}
@@ -21,5 +21,6 @@ a:active  {color:black; background-color:transparent; text-decoration:none; font
 <td><a href="https://ilikecookies2015.github.io/photos">Photos</a>
 </tr>
 </table>
+<p>Here is my collection of photos! There aren't any yet, but there will be soon enough!</p> 
 </body>
 </html>
