--- a/index.htm
+++ b/index.htm
@@ -11,6 +11,7 @@ a:visited {color:black; background-color:transparent; text-decoration:none; font
 a:hover   {color:grey; background-color:transparent; text-decoration:none; font-family:impact;}
 a:active  {color:black; background-color:transparent; text-decoration:none; font-family:impact;}
 </style>
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body style="background-color:orange;">
 <a href="https://www.youtube.com/channel/UCTYdbWVt3R5kX5gCXQHpYJg" target="_blank"><h1 style="font-size:400%;text-align:center;border: 2px solid black;padding: 30px;" title="Click here to go to my channel"><img src="https://yt3.ggpht.com/-OUhnFbf1LVg/AAAAAAAAAAI/AAAAAAAAAAA/UaYBbNaVuLg/s100-c-k-no-mo-rj-c0xffffff/photo.jpg" alt="https://yt3.ggpht.com/-OUhnFbf1LVg/AAAAAAAAAAI/AAAAAAAAAAA/UaYBbNaVuLg/s100-c-k-no-mo-rj-c0xffffff/photo.jpg" style="float:right;width:150px;height:150px;"><p><img src="https://yt3.ggpht.com/-OUhnFbf1LVg/AAAAAAAAAAI/AAAAAAAAAAA/UaYBbNaVuLg/s100-c-k-no-mo-rj-c0xffffff/photo.jpg" alt="https://yt3.ggpht.com/-OUhnFbf1LVg/AAAAAAAAAAI/AAAAAAAAAAA/UaYBbNaVuLg/s100-c-k-no-mo-rj-c0xffffff/photo.jpg" style="float:left;width:150px;height:150px;"><ins>ilikecookies2015</ins></h1></a>
