--- a/videos.html
+++ b/videos.html
@@ -14,19 +14,22 @@ a:active  {color:black; background-color:transparent; text-decoration:none; font
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body style="background-color:orange;">
-<a href="https://www.youtube.com/channel/UCTYdbWVt3R5kX5gCXQHpYJg" target="_blank"><h1 style="font-size:400%;text-align:center;border: 2px solid black;padding: 30px;" title="Click here to go to my channel"><img src="https://yt3.ggpht.com/-OUhnFbf1LVg/AAAAAAAAAAI/AAAAAAAAAAA/UaYBbNaVuLg/s100-c-k-no-mo-rj-c0xffffff/photo.jpg" alt="https://yt3.ggpht.com/-OUhnFbf1LVg/AAAAAAAAAAI/AAAAAAAAAAA/UaYBbNaVuLg/s100-c-k-no-mo-rj-c0xffffff/photo.jpg" style="float:right;width:150px;height:150px;"><p><img src="https://yt3.ggpht.com/-OUhnFbf1LVg/AAAAAAAAAAI/AAAAAAAAAAA/UaYBbNaVuLg/s100-c-k-no-mo-rj-c0xffffff/photo.jpg" alt="https://yt3.ggpht.com/-OUhnFbf1LVg/AAAAAAAAAAI/AAAAAAAAAAA/UaYBbNaVuLg/s100-c-k-no-mo-rj-c0xffffff/photo.jpg" style="float:left;width:150px;height:150px;"><ins>ilikecookies2015</ins></h1></a>
-<table style="margin:1em auto">
+<div>
+<header><a href="https://www.youtube.com/channel/UCTYdbWVt3R5kX5gCXQHpYJg" target="_blank"><h1 style="font-size:400%;text-align:center;border: 2px solid black;padding: 30px;" title="Click here to go to my channel"><img src="https://yt3.ggpht.com/-OUhnFbf1LVg/AAAAAAAAAAI/AAAAAAAAAAA/UaYBbNaVuLg/s100-c-k-no-mo-rj-c0xffffff/photo.jpg" alt="https://yt3.ggpht.com/-OUhnFbf1LVg/AAAAAAAAAAI/AAAAAAAAAAA/UaYBbNaVuLg/s100-c-k-no-mo-rj-c0xffffff/photo.jpg" style="float:right;width:150px;height:150px;"><p><img src="https://yt3.ggpht.com/-OUhnFbf1LVg/AAAAAAAAAAI/AAAAAAAAAAA/UaYBbNaVuLg/s100-c-k-no-mo-rj-c0xffffff/photo.jpg" alt="https://yt3.ggpht.com/-OUhnFbf1LVg/AAAAAAAAAAI/AAAAAAAAAAA/UaYBbNaVuLg/s100-c-k-no-mo-rj-c0xffffff/photo.jpg" style="float:left;width:150px;height:150px;"><ins>ilikecookies2015</ins></h1></a></header>
+<nav><table style="margin:1em auto">
 <tr>
 <td><a href="https://ilikecookies2015.github.io">Home</a>
 <td><a href="https://ilikecookies2015.github.io/videos">Videos</a>
 <td><a href="https://ilikecookies2015.github.io/photos">Photos</a>
 </tr>
-</table>
-<p> Down here are all of my videos. Go check them out, and while you're there, it doesn't hurt to leave a like and a comment!</p>
+</table></nav>
+<article><p> Down here are all of my videos. Go check them out, and while you're there, it doesn't hurt to leave a like and a comment!</p>
 <p><iframe width="492" height="277" src="https://www.youtube.com/embed/Bpng1WdpSp0" frameborder="0" allowfullscreen style="float:left"></iframe><iframe width="492" height="277" src="https://www.youtube.com/embed/yOlPCDGtT1Y" frameborder="0" allowfullscreen style="float:right;"></iframe></p>
 <p><iframe width="492" height="277" src="https://www.youtube.com/embed/7GsSxq_851o" frameborder="0" allowfullscreen style="float:left"></iframe><iframe width="492" height="277" src="https://www.youtube.com/embed/Bpng1WdpSp0" frameborder="0" allowfullscreen style="float:right;"></iframe></p>
 <p><iframe width="492" height="277" src="https://www.youtube.com/embed/75xZeHhRcZw" frameborder="0" allowfullscreen style="float:left"></iframe><iframe width="492" height="277" src="https://www.youtube.com/embed/lf5sZpUyfOA" frameborder="0" allowfullscreen style="float:right;"></iframe></p>
 <p><iframe width="492" height="277" src="https://www.youtube.com/embed/I-UZUanjms8" frameborder="0" allowfullscreen style="float:left"></iframe><iframe width="492" height="277" src="https://www.youtube.com/embed/5USaWjw_xrY" frameborder="0" allowfullscreen style="float:right;"></iframe></p>
-<p><iframe width="492" height="277" src="https://www.youtube.com/embed/VK7Yo65xzuY" frameborder="0" allowfullscreen style="float:left"></iframe><iframe width="492" height="277" src="https://www.youtube.com/embed/onTf4sV_VOQ" frameborder="0" allowfullscreen style="float:right;"></iframe></p>
+<p><iframe width="492" height="277" src="https://www.youtube.com/embed/VK7Yo65xzuY" frameborder="0" allowfullscreen style="float:left"></iframe><iframe width="492" height="277" src="https://www.youtube.com/embed/onTf4sV_VOQ" frameborder="0" allowfullscreen style="float:right;"></iframe></p></article>
+<footer><p>Hosted by GitHub</p></footer>
+</div>
 </body>
 </html>
