--- a/index.htm
+++ b/index.htm
@@ -10,12 +10,11 @@ a:link    {color:black; background-color:transparent; text-decoration:none; font
 a:visited {color:black; background-color:transparent; text-decoration:none; font-family:impact;}
 a:hover   {color:grey; background-color:transparent; text-decoration:none; font-family:impact;}
 a:active  {color:black; background-color:transparent; text-decoration:none; font-family:impact;}
-div.container {width: 100%; border: 1px solid gray;}
 </style>
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body style="background-color:orange;">
-<div class>
+<div>
 <header><a href="https://www.youtube.com/channel/UCTYdbWVt3R5kX5gCXQHpYJg" target="_blank"><h1 style="font-size:400%;text-align:center;border: 2px solid black;padding: 30px;" title="Click here to go to my channel"><img src="https://yt3.ggpht.com/-OUhnFbf1LVg/AAAAAAAAAAI/AAAAAAAAAAA/UaYBbNaVuLg/s100-c-k-no-mo-rj-c0xffffff/photo.jpg" alt="https://yt3.ggpht.com/-OUhnFbf1LVg/AAAAAAAAAAI/AAAAAAAAAAA/UaYBbNaVuLg/s100-c-k-no-mo-rj-c0xffffff/photo.jpg" style="float:right;width:150px;height:150px;"><p><img src="https://yt3.ggpht.com/-OUhnFbf1LVg/AAAAAAAAAAI/AAAAAAAAAAA/UaYBbNaVuLg/s100-c-k-no-mo-rj-c0xffffff/photo.jpg" alt="https://yt3.ggpht.com/-OUhnFbf1LVg/AAAAAAAAAAI/AAAAAAAAAAA/UaYBbNaVuLg/s100-c-k-no-mo-rj-c0xffffff/photo.jpg" style="float:left;width:150px;height:150px;"><ins>ilikecookies2015</ins></h1></a></header>
 <nav><table style="margin:1em auto">
 <tr>
@@ -32,7 +31,8 @@ On this website, I will upload all of my latest videos, also some photos of the 
 I will also post if I am doing a live stream. To go check out my videos or my photos, click on the links above!
  Stay tuned for new videos regularly! This website is just a work in progress</p></article>
 <br>
-<footer><p style="text-align:center; font-size: 100%">Hosted by GitHub</p>
+<footer><p style="text-align:center; font-size: 100%">Hosted by GitHub</p></footer>
+</div>
 </body>
 </html>
 
