--- a/videos.html
+++ b/videos.html
@@ -29,7 +29,7 @@ a:active  {color:black; background-color:transparent; text-decoration:none; font
 <p><iframe width="492" height="277" src="https://www.youtube.com/embed/75xZeHhRcZw" frameborder="0" allowfullscreen style="float:left"></iframe><iframe width="492" height="277" src="https://www.youtube.com/embed/lf5sZpUyfOA" frameborder="0" allowfullscreen style="float:right;"></iframe></p>
 <p><iframe width="492" height="277" src="https://www.youtube.com/embed/I-UZUanjms8" frameborder="0" allowfullscreen style="float:left"></iframe><iframe width="492" height="277" src="https://www.youtube.com/embed/5USaWjw_xrY" frameborder="0" allowfullscreen style="float:right;"></iframe></p>
 <p><iframe width="492" height="277" src="https://www.youtube.com/embed/VK7Yo65xzuY" frameborder="0" allowfullscreen style="float:left"></iframe><iframe width="492" height="277" src="https://www.youtube.com/embed/onTf4sV_VOQ" frameborder="0" allowfullscreen style="float:right;"></iframe></p></article>
-<footer><p>Hosted by GitHub</p></footer>
+<footer><p style="text-align:center; font-size: 100%">Hosted by GitHub</p></footer>
 </div>
 </body>
 </html>
