--- a/index.htm
+++ b/index.htm
@@ -31,6 +31,7 @@ On this website, I will upload all of my latest videos, also some photos of the 
 I will also post if I am doing a live stream. To go check out my videos or my photos, click on the links above!
  Stay tuned for new videos regularly! This website is just a work in progress</p></article>
 <br>
+<p><iframe width="640" height="360" src="https://www.youtube.com/embed/UErqEyoZZZA" frameborder="0" allowfullscreen style="float:right"></iframe>Here is our current live stream</p>
 <footer><p style="text-align:center; font-size: 100%">Hosted by GitHub</p></footer>
 </div>
 </body>
