--- a/index.html
+++ b/index.html
@@ -67,10 +67,17 @@ h2 {font-family: Helvetica;}
         <p><iframe width="462" height="247" src="https://www.youtube.com/embed/7GsSxq_851o" frameborder="0" allowfullscreen style="float:left; padding-bottom: 15px"></iframe><iframe width="462" height="247" src="https://www.youtube.com/embed/Bpng1WdpSp0" frameborder="0" allowfullscreen style="float:right; padding-bottom: 15px"></iframe></p>
         <p><iframe width="462" height="247" src="https://www.youtube.com/embed/75xZeHhRcZw" frameborder="0" allowfullscreen style="float:left; padding-bottom: 15px"></iframe><iframe width="462" height="247" src="https://www.youtube.com/embed/lf5sZpUyfOA" frameborder="0" allowfullscreen style="float:right; padding-bottom: 15px"></iframe></p>
         <p><iframe width="462" height="247" src="https://www.youtube.com/embed/I-UZUanjms8" frameborder="0" allowfullscreen style="float:left; padding-bottom: 15px"></iframe><iframe width="462" height="247" src="https://www.youtube.com/embed/5USaWjw_xrY" frameborder="0" allowfullscreen style="float:right; padding-bottom: 15px"></iframe></p>
-        <p><iframe width="462" height="247" src="https://www.youtube.com/embed/VK7Yo65xzuY" frameborder="0" allowfullscreen style="float:left; padding-bottom: 15px"></iframe><iframe width="462" height="247" src="https://www.youtube.com/embed/onTf4sV_VOQ" frameborder="0" allowfullscreen style="float:right; padding-bottom: 15px"></iframe></p>
+        <p><iframe width="462" height="247" src="https://www.youtube.com/embed/VK7Yo65xzuY" frameborder="0" allowfullscreen style="float:left; padding-bottom: 50px"></iframe><iframe width="462" height="247" src="https://www.youtube.com/embed/onTf4sV_VOQ" frameborder="0" allowfullscreen style="float:right; padding-bottom: 50px"></iframe></p>
 
-
-        <h2 id="photos">Photos</h2>
+        <br>
+		<br>
+		<br>
+        <h2 style="padding: 25px;">Photos</h2>
+		
+		<p id="photos" style="float: left;">New Microphone!</p>
+		<br>
+		<br>
+		<p><img style="user-select: none; float: left; padding-bottom: 15px;" src="https://gm1.ggpht.com/EZsIBuo6-1ChmkCOf8Wzs02jZtuMu5mftBqzKnA9nNLRl24mN2dewI1F-eQ-QybHXZVmIWWPvuR2w9PAoJQ0B7iYlWJnm_1KelrqtmN6s9h1VHDQ0jZHQ9eHJz8vNibTaAYVSgs0i7nzSxmlAi36iBPZmiHzLbyd-bvSe-4_8TQRqAaxh04kz2AazbK14KzgO4rtHZYBFBkts5OhBrTFymMZPpBQqjjNlIHrOhDI2-2pEQ8YrqFn_OWA6XCi3G6Y_6N1RT3lDVHf3cz2SdhG7LVIK6P2AplaHfuG0D7cJ6F-e0qlM-y5L5FWOrlXvVSyfmVPSEyf2_N23sljzzA2_BMq4BIIh_1FXEqdn-zeHVez7vGPuqhR1UlByi18P-Uk7LQ2Ru5WsAJHsmzdtDyTMlLoMU_ClgWkPyum-hZHyhe6wsvorfIWXeFlxIUU8gjd1c4MhPOJJhLCo93l8zBLZAc24RCzH0lT5fSW_myBzznNzNiu3RcUsbai6xd5m44eaLafynGAVGbU-QHPuZB6Wd6V3lCifUmRcP_nmxvObayGCuq8p9ZjimPpng1Dg_Jgw2PX1x0WRwVbX6f0BJQCj4XK85cm_k0-dRHj5dxB_C2m491858cKdWNrXdcOolWfY8hAlkGd1ZK5HuOAzKsDSNBW4HKLe5YluydJYAKxiqhudr5A4-s_d8iCV8y28UQq9D-dt-jpJ0u0=s0-l75-ft-l75-ft" width="441" height="589"></p>
  
 	</div>
 
