--- a/aboutus.html
+++ b/aboutus.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <title>ilikecookies2015</title>
@@ -36,7 +36,7 @@ h2 {font-family: Helvetica;}
 
 			<div class="nav">
 				<ul>
-					<li><a href="https://ilikecookies2015.github.io">Home</a></li>
+                    <li><a href="https://ilikecookies2015.github.io">Home</a></li>
 					<li><a href="https://ilikecookies2015.github.io/videos">Videos</a></li>
 					<li><a href="https://ilikecookies2015.github.io/photos">Photos</a></li>
 					<li><a href="https://ilikecookies2015.github.io/aboutus">About us</a></li>
@@ -48,12 +48,16 @@ h2 {font-family: Helvetica;}
 	<br>
 	<br>
 	<br>
-
+	
 	<div class="container">
 
 	<div class="content">
-		<p>Hey there! This website is WIP. CLick on the links up there to go check out my videos, photos and more!</p> 
-		
+		<p>Hey there! Its ilikecookies2015, but just call me Cookies! Im a small youtuber, who has big dreams. 
+           Just before we go any further, if you haven't yet, go subscribe <a href="https://www.youtube.com/channel/UCTYdbWVt3R5kX5gCXQHpYJg?sub_confirmation=1" target="_blank" style="color: black">here</a>. I post gaming videos with collabs like <a href="https://www.youtube.com/channel/UC4Erl7CW5K-fCjHg5HBi0hA" target="_blank" style="color: black">TigerShooter Plays</a> and <a href="https://www.youtube.com/channel/UCuYcy8Svhx3E3kFIEwwiptA" target="_blank" style="color: black">
+           LegendaryEverything</a>. We play some Minecraft, Roblox, Slither.io and tons of other awesome games!
+           On this website, I will upload all of my latest videos, also some photos of the games I am recording, or playing.
+           I will also post if I am doing a live stream. To go check out my videos or my photos, click on the links above!
+           Stay tuned for new videos regularly! This website is just a work in progress</p> 
 	</div>
 
 	</div>
